# google-workspace-skill

./: .gitignore  CLAUDE.md  LIVE_TESTING.md  README.md  SKILL-advanced.md  SKILL-typesetting.md  SKILL.md  TESTING.md  docker-compose-kroki.yml  pyproject.toml
reference/: calendar.md  contacts.md  docs.md  drive.md  gmail.md  sheets.md  slides.md
src/gws/: cli.py  config.py  exceptions.py  output.py
src/gws/auth/: __init__.py  oauth.py  provider.py  scopes.py  server.py
src/gws/commands/: _account.py  calendar.py  contacts.py  convert.py  docs.py  drive.py  gmail.py  sheets.py  slides.py
src/gws/services/: base.py  calendar.py  contacts.py  convert.py  docs.py  drive.py  gmail.py  sheets.py  slides.py
src/gws/utils/: colors.py  diagrams.py  retry.py  security.py
tests/: __init__.py  conftest.py  test_account_commands.py  test_account_enforcement.py  test_auth_accounts.py  test_auth_provider.py  test_config_accounts.py  test_crypto.py  test_docs.py  test_gmail_mime.py  test_output.py  test_server_auth.py
