[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gws"
version = "1.0.0"
description = "Google Workspace CLI - Unified management for Docs, Sheets, Slides, Drive, Gmail, Calendar, and Contacts"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Marios Andreopoulos", email = "opensource@andmarios.com" }
]
keywords = ["google", "workspace", "docs", "sheets", "slides", "drive", "gmail", "calendar", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "google-api-python-client>=2.100.0",
    "google-auth>=2.23.0",
    "google-auth-oauthlib>=1.1.0",
    "httpx>=0.25.0",
    "prompt-security-utils",
]

[tool.uv.sources]
# For local development:
# prompt-security-utils = { path = "../prompt-security-utils", editable = true }
# For production (from GitHub):
prompt-security-utils = { git = "https://github.com/andmarios/prompt-security-utils" }

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
gws = "gws.cli:app"

[project.urls]
Homepage = "https://github.com/andmarios/google-workspace-skill"
Repository = "https://github.com/andmarios/google-workspace-skill"

[tool.hatch.build.targets.wheel]
packages = ["src/gws"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
